--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,17 @@
 		<java.version>1.8</java.version>
 	</properties>
 
+    <repositories>
+            <repository>
+                    <id>OSGEO GeoTools repo</id>
+                    <url>http://download.osgeo.org/webdav/geotools</url>
+            </repository>
+            <repository>
+                    <id>Hibernate Spatial repo</id>
+                    <url>http://www.hibernatespatial.org/repository</url>
+            </repository>
+    </repositories>
+    
 	<dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -28,10 +39,15 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
+			<groupId>net.postgis</groupId>
+			<artifactId>postgis-jdbc</artifactId>
+			<version>2.3.0</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-spatial</artifactId>
+		</dependency>		
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
