--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,5 @@ spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
 # Because detection is disabled you have to set correct dialect by hand.
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+spring.jpa.database-platform=org.hibernate.spatial.dialect.postgis.PostgisDialect
+
