Unit and integration tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+project.version=@project.version@
+
 #Database Configuration
 spring.datasource.url=jdbc:postgresql://localhost/bionexo
 spring.datasource.username=bionexo
