--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
                     <url>http://www.hibernatespatial.org/repository</url>
             </repository>
     </repositories>
-    
+
 	<dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -53,6 +53,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.assertj</groupId>
+		    <artifactId>assertj-core</artifactId>
+		    <scope>test</scope>
 		</dependency>
 	</dependencies>
 
