--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 project.version=@project.version@
 
 #Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost/bionexo
-spring.datasource.username=bionexo
-spring.datasource.password=bionexo
+spring.datasource.url=jdbc:postgresql://localhost/nearest-ubs
+spring.datasource.username=nearest-ubs
+spring.datasource.password=nearest-ubs
 spring.jpa.generate-ddl=true
 
 # Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
