--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,24 @@
 			            </goals>
 			        </execution>
 			    </executions>
-			</plugin>		
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<configuration>
+					<includes>
+						<include>%regex[.*IT.*.class]</include>
+					</includes>            
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>            
+				</executions>
+			</plugin>	
 		</plugins>
 	</build>
 
