--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,3 @@
 project.version=@project.version@
 
-#Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost/nearest-ubs
-spring.datasource.username=nearest-ubs
-spring.datasource.password=nearest-ubs
-spring.jpa.generate-ddl=true
-
-# Disable feature detection by this undocumented parameter. Check the org.hibernate.engine.jdbc.internal.JdbcServiceImpl.configure method for more details.
-spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
-
-# Because detection is disabled you have to set correct dialect by hand.
-spring.jpa.database-platform=org.hibernate.spatial.dialect.postgis.PostgisDialect
-
+spring.profiles.active: dev
