--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,14 @@
 			    </executions>
 			</plugin>
 			<plugin>
+				<groupId>org.eluder.coveralls</groupId>
+				<artifactId>coveralls-maven-plugin</artifactId>
+				<version>4.3.0</version>
+				<configuration>
+					<repoToken>Q7RlIs524HKWOroHuwU9tOtOPetVgJvfX</repoToken>
+				</configuration>
+			</plugin>			
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
